--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,16 @@
 {
     "version": 2,
     "builds": [
-        {"src": "app.py", "use": "@vercel/python"}
+        {
+            "src": "app.py",
+            "use": "@vercel/python",
+            "config": { "pythonVersion": "3.10" }
+        }
     ],
     "routes": [
-        {"src": "/(.*)", "dest": "app.py"}
+        {
+            "src": "/(.*)",
+            "dest": "app.py"
+        }
     ]
 }
